--- a/src/components/burger/Burger.module.css
+++ b/src/components/burger/Burger.module.css
@@ -5,7 +5,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
-    /* overflow: scroll; */
+    overflow: scroll;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
